Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99192

tst_qquickpixmapcache Failed

XMLWordPrintable

    • db7e1e7761 (qt/qtdeclarative/dev) c7aab62e40 (qt/qtdeclarative/6.3) c7aab62e40 (qt/tqtc-qtdeclarative/6.3) db7e1e7761 (qt/tqtc-qtdeclarative/dev) e3e2674100 (qt/qtbase/dev) e3e2674100 (qt/tqtc-qtbase/dev) 4b8938f3be (qt/qtbase/6.3)

      agent:2021/12/13 21:17:10 build.go:394: The following tests FAILED:
      agent:2021/12/13 21:17:10 build.go:394: 	 63 - tst_qquickpixmapcache (Failed)
      agent:2021/12/13 21:17:10 build.go:394: Errors while running CTest
      agent:2021/12/13 21:17:10 build.go:394: Output from these tests are in: /home/qt/work/qt/qtdeclarative_standalone_tests/Testing/Temporary/LastTest.log
      agent:2021/12/13 21:17:10 build.go:394: Use "--rerun-failed --output-on-failure" to re-run the failed cases verbosely.
      agent:2021/12/13 21:17:10 build.go:445: Process finished with error: exit status 8
      agent:2021/12/13 21:17:10 build.go:805: Executing scheduled instruction 1 of 3 - Upload all core dumps if there are some
      agent:2021/12/13 21:17:10 build.go:635: Skip uploading core files because CORE_FILES_PATH is not set in the environment
      agent:2021/12/13 21:17:10 build.go:813: 
      agent:2021/12/13 21:17:10 build.go:805: Executing scheduled instruction 2 of 3 - Print sccache statistics
      agent:2021/12/13 21:17:10 build.go:417: [sccache -s] 30s 30s false true
      agent:2021/12/13 21:17:10 build.go:394: Compile requests                      0
      agent:2021/12/13 21:17:10 build.go:394: Compile requests executed             0
      agent:2021/12/13 21:17:10 build.go:394: Cache hits                            0
      agent:2021/12/13 21:17:10 build.go:394: Cache misses                          0
      agent:2021/12/13 21:17:10 build.go:394: Cache timeouts                        0
      agent:2021/12/13 21:17:10 build.go:394: Cache read errors                     0
      agent:2021/12/13 21:17:10 build.go:394: Forced recaches                       0
      agent:2021/12/13 21:17:10 build.go:394: Cache write errors                    0
      agent:2021/12/13 21:17:10 build.go:394: Compilation failures                  0
      agent:2021/12/13 21:17:10 build.go:394: Cache errors                          0
      agent:2021/12/13 21:17:10 build.go:394: Non-cacheable compilations            0
      agent:2021/12/13 21:17:10 build.go:394: Non-cacheable calls                   0
      agent:2021/12/13 21:17:10 build.go:394: Non-compilation calls                 0
      agent:2021/12/13 21:17:10 build.go:394: Unsupported compiler calls            0
      agent:2021/12/13 21:17:10 build.go:394: Average cache write               0.000 s
      agent:2021/12/13 21:17:10 build.go:394: Average cache read miss           0.000 s
      agent:2021/12/13 21:17:10 build.go:394: Average cache read hit            0.000 s
      agent:2021/12/13 21:17:10 build.go:394: Failed distributed compilations       0
      agent:2021/12/13 21:17:10 build.go:394: Cache location                  S3, bucket: Bucket(name=cache, base_url=http://ci-sccache:9000/cache/)
      agent:2021/12/13 21:17:10 build.go:813: 
      agent:2021/12/13 21:17:10 build.go:805: Executing scheduled instruction 3 of 3 - Upload test results
      agent:2021/12/13 21:17:10 storageclient.go:533: Collecting test results, archiving and uploading them
      agent:2021/12/13 21:17:10 result.go:181: Collecting 62 test results ...
      agent:2021/12/13 21:17:11 build.go:813: 
      agent:2021/12/13 21:17:11 agent.go:379: Test failed
      agent:2021/12/13 21:17:11 agent.go:229: ERROR building: exit status 8
      INFO:workitem.py:660(5057): Agent FINISHED FAIL: <could not determine failure location - check log: /mnt/coin-storage-01/ci-working-dir/storage/qt/qtdeclarative/ca1a3a32f2d09507db78009bece188dce3370a64/LinuxUbuntu_20_04x86_64LinuxUbuntu_20_04x86_64GCCqtci-linux-Ubuntu-20.04-x86_64-50-9f8b56Sccache/999e4febed3e3297e2a40e4babe0be0448031b76/test_1639433114/log.txt.gz>: qt/qtdeclarative/ca1a3a32f2d09507db78009bece188dce3370a64/LinuxUbuntu_20_04x86_64LinuxUbuntu_20_04x86_64GCCqtci-linux-Ubuntu-20.04-x86_64-50-9f8b56Sccache/999e4febed3e3297e2a40e4babe0be0448031b76/Test
      

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/ca1a3a32f2d09507db78009bece188dce3370a64/LinuxUbuntu_20_04x86_64LinuxUbuntu_20_04x86_64GCCqtci-linux-Ubuntu-20.04-x86_64-50-9f8b56Sccache/999e4febed3e3297e2a40e4babe0be0448031b76/test_1639433114/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1639433112

      Tested changes (refs/builds/qtci/dev/1639429837):
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/386118/2 Blacklist flaky tst_QSequentialAnimationGroupJob test on macos
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/386011/2 Update dependencies on 'dev' in qt/qtdeclarative

        For Gerrit Dashboard: QTBUG-99192
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes